Created with BatNoter

--- a/docs/1.md
+++ b/docs/1.md
@@ -1,1 +1,7 @@
-111111
+b2 sync --delete --replaceNewer Ditto b2://dittobackup
+b2 authorize-account id key
+>b2 create-bucket ditto allPrivate
+b2 list-buckets
+b2 get-account-info
+b2 download-file-by-name joplin-v2.4.3.apk joplin.apk
+b2 upload-file joplin395922 b2-linux b2-linux
