--- a/20211025.md
+++ b/20211025.md
@@ -3,6 +3,9 @@ l116754762
 
 alter table orders AUTO_INCREMENT=43955
 
+echo 'foo:123:bar:baz' | grep --color   -E '^([^:]+:){2}bar'
+
+
 curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.18.0/bin/linux/amd64/kubectl
 
  curl -Lo minikube https://storage.googleapis.com/minikube/releases/v1.25.2/minikube-linux-amd64
